headers/IOTCAPIs.h


typedef enum
{
	IOTC_NON_SECURE_MODE = 0,
	IOTC_SECURE_MODE = 1,
	IOTC_ARBITRARY_MODE = 2
} IOTCSessionMode;
struct st_SInfo
{
	unsigned char Mode; 
	char CorD; 
	char UID[21]; 
	char RemoteIP[17]; 
	unsigned short RemotePort; 
	unsigned int TX_Packetcount; 
	unsigned int RX_Packetcount; 
	unsigned int IOTCVersion; 
	unsigned short VID; 
	unsigned short PID; 
	unsigned short GID; 
	unsigned char NatType; 
	unsigned char isSecure; 
};
P2PAPI_API int  IOTC_Listen(unsigned int nTimeout);
P2PAPI_API int  IOTC_Listen2(unsigned int nTimeout, const char *cszAESKey, IOTCSessionMode nSessionMode);
P2PAPI_API int  IOTC_Connect_ByUID(const char *cszUID);
P2PAPI_API int  IOTC_Connect_ByUID2(const char *cszUID, const char *cszAESKey, IOTCSessionMode nSessionMode);
P2PAPI_API int  IOTC_Session_Check(int nIOTCSessionID, struct st_SInfo *psSessionInfo);