headers/AVAPIs.h


#define AV_MAX_IOCTRL_DATA_SIZE					1024
#define		AV_ER_NoERROR						 0
#define		AV_ER_INVALID_ARG					-20000
#define		AV_ER_BUFPARA_MAXSIZE_INSUFF		-20001
#define		AV_ER_EXCEED_MAX_SIZE				-20006
#define		AV_ER_INVALID_SID					-20010
#define		AV_ER_TIMEOUT						-20011
#define		AV_ER_DATA_NOREADY					-20012
#define		AV_ER_SESSION_CLOSE_BY_REMOTE		-20015
#define		AV_ER_REMOTE_TIMEOUT_DISCONNECT		-20016
#define		AV_ER_SENDIOCTRL_ALREADY_CALLED	   	-20021
#define		AV_ER_SENDIOCTRL_EXIT		    	-20022
#define		AV_ER_NO_PERMISSION                     -20023
AVAPI_API int avSendIOCtrl(int nAVChannelID, unsigned int nIOCtrlType, const char *cabIOCtrlData, int nIOCtrlDataSize);
AVAPI_API int avRecvIOCtrl(int nAVChannelID, unsigned int *pnIOCtrlType, char *abIOCtrlData, int nIOCtrlMaxDataSize, unsigned int nTimeout);
AVAPI_API int avSendIOCtrlExit(int nAVChannelID);
AVAPI_API float avResendBufUsageRate (int nAVChannelID);