src/bindings.rs

extern "C" {
    #[doc = " \\brief Send AV IO control"]
    #[doc = ""]
    #[doc = " \\details This function is used by AV servers or AV clients to send a"]
    #[doc = "\t\t\tAV IO control."]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to send IO control"]
    #[doc = " \\param nIOCtrlType [in] The type of IO control"]
    #[doc = " \\param cabIOCtrlData [in] The buffer of IO control data"]
    #[doc = " \\param nIOCtrlDataSize [in] The length of IO control data"]
    #[doc = ""]
    #[doc = " \\return #AV_ER_NoERROR if sending successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The AV channel ID is not valid"]
    #[doc = "\t\t\t- #AV_ER_SENDIOCTRL_ALREADY_CALLED This AV channel is already in sending"]
    #[doc = "\t\t\t\tIO control process"]
    #[doc = "\t\t\t- #AV_ER_SESSION_CLOSE_BY_REMOTE The remote site already closes"]
    #[doc = "\t\t\t\tthis IOTC session"]
    #[doc = "\t\t\t- #AV_ER_REMOTE_TIMEOUT_DISCONNECT The timeout expires because"]
    #[doc = "\t\t\t\tremote site has no response."]
    #[doc = "\t\t\t- #AV_ER_INVALID_SID The IOTC session of this AV channel is not valid"]
    #[doc = "\t\t\t- #AV_ER_SENDIOCTRL_EXIT avSendIOCtrlExit() is called before this"]
    #[doc = "\t\t\t\tfunction is returned"]
    #[doc = "\t\t\t- #AV_ER_EXCEED_MAX_SIZE The IO control data and type to be sent exceeds"]
    #[doc = "\t\t\t\t#AV_MAX_IOCTRL_DATA_SIZE"]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    #[doc = " \\see avRecvIOCtrl(), avSendIOCtrlExit()"]
    #[doc = ""]
    #[doc = " \\attention This function is a block process and it will return until"]
    #[doc = "\t\t\t\thaving acknowledgment from the receiver."]
    pub fn avSendIOCtrl(
        nAVChannelID: ::std::os::raw::c_int,
        nIOCtrlType: ::std::os::raw::c_uint,
        cabIOCtrlData: *const ::std::os::raw::c_char,
        nIOCtrlDataSize: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Receive AV IO control"]
    #[doc = ""]
    #[doc = " \\details This function is used by AV servers or AV clients to receive a"]
    #[doc = "\t\t\tAV IO control."]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel to receive IO control"]
    #[doc = " \\param pnIOCtrlType [out] The type of received IO control"]
    #[doc = " \\param abIOCtrlData [out] The buffer of received IO control data"]
    #[doc = " \\param nIOCtrlMaxDataSize [in] The max length of buffer of received IO control data"]
    #[doc = " \\param nTimeout [in] The timeout for this function in unit of million-second, give 0 means return immediately"]
    #[doc = ""]
    #[doc = " \\return The actual length of received result stored in abIOCtrlData if"]
    #[doc = "\t\t\treceiving IO control successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The AV channel ID is not valid or IO control type"]
    #[doc = "\t\t\t\t/ data is null"]
    #[doc = "\t\t\t- #AV_ER_SESSION_CLOSE_BY_REMOTE The remote site already closes"]
    #[doc = "\t\t\t\tthis IOTC session"]
    #[doc = "\t\t\t- #AV_ER_REMOTE_TIMEOUT_DISCONNECT The timeout expires because"]
    #[doc = "\t\t\t\tremote site has no response."]
    #[doc = "\t\t\t- #AV_ER_INVALID_SID The IOTC session of this AV channel is not valid"]
    #[doc = "\t\t\t- #AV_ER_DATA_NOREADY The IO control is not ready for receiving yet."]
    #[doc = "\t\t\t- #AV_ER_TIMEOUT The timeout specified by nTimeout expires before"]
    #[doc = "\t\t\t\treceiving IO control process is performed completely"]
    #[doc = "\t\t\t- #AV_ER_BUFPARA_MAXSIZE_INSUFF The IO control data to be received exceeds"]
    #[doc = "\t\t\t\tthe size of abIOCtrlData, i.e. nIOCtrlMaxDataSize"]
    #[doc = "\t\t\t- #AV_ER_NO_PERMISSION the AV module does not support Lite UID"]
    #[doc = ""]
    #[doc = " \\see avSendIOCtrl()"]
    #[doc = ""]
    pub fn avRecvIOCtrl(
        nAVChannelID: ::std::os::raw::c_int,
        pnIOCtrlType: *mut ::std::os::raw::c_uint,
        abIOCtrlData: *mut ::std::os::raw::c_char,
        nIOCtrlMaxDataSize: ::std::os::raw::c_int,
        nTimeout: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Used by an AV server or an AV client to exit sending IO control process"]
    #[doc = ""]
    #[doc = " \\details Since avSendIOCtrl() process is a block process and that means"]
    #[doc = "\t\t\tthe caller has to wait for the acknowledgment from the receipt"]
    #[doc = "\t\t\tbefore avSendIOCtrl() returns. In some cases, caller may want"]
    #[doc = "\t\t\tto exit sending immediately by this function in another thread."]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel in sending IO control"]
    #[doc = ""]
    #[doc = " \\return #AV_ER_NoERROR if sending successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #AV_ER_INVALID_ARG The AV channel ID is not valid"]
    pub fn avSendIOCtrlExit(nAVChannelID: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Used by an AV server, in order to know the usage rate of resend buffer"]
    #[doc = ""]
    #[doc = " \\details AV server calls this function to know the usage rate of resend buffer."]
    #[doc = "          It will return a float value between 0 and 1."]
    #[doc = "          0 means that resend buffer is empty, 1 means that resend buffer is full."]
    #[doc = "          The others mean usage rate."]
    #[doc = ""]
    #[doc = " \\param nAVChannelID [in] The channel ID of the AV channel"]
    #[doc = ""]
    #[doc = " \\return Usage rate of resend buffer, if return value >= 0."]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "          - #AV_ER_INVALID_ARG The AV channel ID is not valid"]
    pub fn avResendBufUsageRate(nAVChannelID: ::std::os::raw::c_int) -> f32;
}
#[doc = " IOTC session will be established in non-secure mode. <br>"]
#[doc = " - For devices, the behavior is the same as IOTC_Listen(). <br>"]
#[doc = " - For clients, the behavior is the same as IOTC_Connect_ByUID()"]
pub const IOTCSessionMode_IOTC_NON_SECURE_MODE: IOTCSessionMode = 0;
#[doc = " IOTC session will be established in secure mode. <br>"]
#[doc = " - For devices, it means only secure connection will be accepted. <br>"]
#[doc = " - For clients, it means only secure connection will be performed"]
pub const IOTCSessionMode_IOTC_SECURE_MODE: IOTCSessionMode = 1;
#[doc = " IOTC session will be established in either non-secure or secure mode,"]
#[doc = " depending on remote site's request. Can use IOTC_Session_Check()"]
#[doc = " to check what mode is actually used. <br>"]
#[doc = " - For devices, it means both non-secure or secure modes are accepted. <br>"]
#[doc = " - For clients, it means either non-secure or secure modes can be performed."]
pub const IOTCSessionMode_IOTC_ARBITRARY_MODE: IOTCSessionMode = 2;
#[doc = " \\details IOTC session mode, used in IOTC_Listen2(), IOTC_Connect_ByUID2()"]
#[doc = "\t\t\tto specify what kinds of IOTC session"]
#[doc = "\t\t\tthat devices will listen or clients will connect."]
pub type IOTCSessionMode = ::std::os::raw::c_uint;
#[doc = " \\details IOTC session info, containing all the information when a IOTC session is"]
#[doc = "  established between a device and a client. Users can use IOTC_Session_Check()"]
#[doc = "  to get IOTC session information."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct st_SInfo {
    #[doc = "!< 0: P2P mode, 1: Relay mode, 2: LAN mode"]
    pub Mode: ::std::os::raw::c_uchar,
    #[doc = "!< 0: As a Client, 1: As a Device"]
    pub CorD: ::std::os::raw::c_char,
    #[doc = "!< The UID of the device"]
    pub UID: [::std::os::raw::c_char; 21usize],
    #[doc = "!< The IP address of remote site used during this IOTC session"]
    pub RemoteIP: [::std::os::raw::c_char; 17usize],
    #[doc = "!< The port number of remote site used during this IOTC session"]
    pub RemotePort: ::std::os::raw::c_ushort,
    #[doc = "!< The total packets sent from the device and the client during this IOTC session"]
    pub TX_Packetcount: ::std::os::raw::c_uint,
    #[doc = "!< The total packets received in the device and the client during this IOTC session"]
    pub RX_Packetcount: ::std::os::raw::c_uint,
    #[doc = "!< The IOTC version"]
    pub IOTCVersion: ::std::os::raw::c_uint,
    #[doc = "!< The Vendor ID, part of VPG mechanism"]
    pub VID: ::std::os::raw::c_ushort,
    #[doc = "!< The Product ID, part of VPG mechanism"]
    pub PID: ::std::os::raw::c_ushort,
    #[doc = "!< The Group ID, part of VPG mechanism"]
    pub GID: ::std::os::raw::c_ushort,
    #[doc = "!< The remote NAT type"]
    pub NatType: ::std::os::raw::c_uchar,
    #[doc = "!< 0: The IOTC session is in non-secure mode, 1: The IOTC session is in secure mode"]
    pub isSecure: ::std::os::raw::c_uchar,
}
